third_party/move/move-compiler-v2/tests/checking/abilities/instantiate_signatures.exp

Diagnostics:
error: type `R` is missing required ability `drop`
   ┌─ tests/checking/abilities/instantiate_signatures.move:11:15
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
11 │         f1: S<R>,
   │               ^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference type `&u64` is not allowed as a type argument
   ┌─ tests/checking/abilities/instantiate_signatures.move:12:15
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
12 │         f2: S<&u64>,
   │               ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/checking/abilities/instantiate_signatures.move:13:13
   │
13 │         f3: &(&u64),
   │             ^^^^^^^

error: reference type `&&u64` is not allowed as a field type
   ┌─ tests/checking/abilities/instantiate_signatures.move:13:13
   │
13 │         f3: &(&u64),
   │             ^^^^^^^
   │
   = required by declaration of field `f3`

error: tuple type `(u64, u64)` is not allowed as a type argument
   ┌─ tests/checking/abilities/instantiate_signatures.move:14:15
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
14 │         f4: S<(u64, u64)>,
   │               ^^^^^^^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: type `R` is missing required ability `drop`
   ┌─ tests/checking/abilities/instantiate_signatures.move:18:16
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
18 │         _f1: S<R>,
   │                ^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference type `&u64` is not allowed as a type argument
   ┌─ tests/checking/abilities/instantiate_signatures.move:19:16
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
19 │         _f2: S<&u64>,
   │                ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/checking/abilities/instantiate_signatures.move:20:14
   │
20 │         _f3: &(&u64),
   │              ^^^^^^^

error: tuple type `(u64, u64)` is not allowed as a type argument
   ┌─ tests/checking/abilities/instantiate_signatures.move:21:16
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
21 │         _f4: S<(u64, u64)>,
   │                ^^^^^^^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/checking/abilities/instantiate_signatures.move:25:9
   │
25 │         &(&u64),
   │         ^^^^^^^

error: type `R` is missing required ability `drop`
   ┌─ tests/checking/abilities/instantiate_signatures.move:32:19
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
32 │         let f1: S<R> = abort 0;
   │                   ^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference type `&u64` is not allowed as a type argument
   ┌─ tests/checking/abilities/instantiate_signatures.move:33:19
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
33 │         let f2: S<&u64> = abort 0;
   │                   ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/checking/abilities/instantiate_signatures.move:34:17
   │
34 │         let f3: &(&u64) = abort 0;
   │                 ^^^^^^^

error: tuple type `(u64, u64)` is not allowed as a type argument
   ┌─ tests/checking/abilities/instantiate_signatures.move:35:19
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
35 │         let f4: S<(u64, u64)> = abort 0;
   │                   ^^^^^^^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/checking/abilities/instantiate_signatures.move:39:12
   │
39 │         id<&(&u64)>(abort 0);
   │            ^^^^^^^

error: reference type `&&u64` is not allowed as a type argument
   ┌─ tests/checking/abilities/instantiate_signatures.move:39:12
   │
 5 │     fun id<T>(x: T): T { x }
   │            - declaration of type parameter `T`
   ·
39 │         id<&(&u64)>(abort 0);
   │            ^^^^^^^
   │
   = required by instantiating type parameter `T` of function `id`

error: type `R` is missing required ability `drop`
   ┌─ tests/checking/abilities/instantiate_signatures.move:42:11
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
42 │         S<S<R>> { f: abort 0 };
   │           ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/checking/abilities/instantiate_signatures.move:44:11
   │
44 │         S<&(&u64)> { f: abort 0 };
   │           ^^^^^^^
